implement updating native window decorations for dark mode on macOS